--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,141 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{Muschalik.2022,
+	title        = {Agnostic Explanation of Model Change based on Feature Importance},
+	author       = {Maximilian Muschalik and Fabian Fumagalli and Barbara Hammer and Eyke H{\"{u}}llermeier},
+	year         = 2022,
+	journal      = {K{\"{u}}nstliche Intell.},
+	volume       = 36,
+	number       = 3,
+	pages        = {211--224},
+	doi          = {10.1007/s13218-022-00766-6},
+	abbr         = {K{\"{u}}nstliche Intell.},
+	selected     = {false},
+	website      = {https://link.springer.com/article/10.1007/s13218-022-00766-6},
+	bibtex_show  = {true}
 }
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{Fumagalli.2023,
+	title        = {On Feature Removal for Explainability in Dynamic Environments},
+	author       = {Fabian Fumagalli and Maximilian Muschalik and Eyke H{\"{u}}llermeier and Barbara Hammer},
+	year         = 2023,
+	booktitle    = {31st European Symposium on Artificial Neural Networks, Computational Intelligence and Machine Learning ({ESANN} 2023)},
+	doi          = {10.14428/ESANN/2023.ES2023-148},
+	url          = {https://doi.org/10.14428/esann/2023.ES2023-148},
+	abbr         = {ESANN},
+	bibtex_show  = {true}
 }
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{Fumagalli.2023a,
+	title        = {Incremental Permutation Feature Importance (iPFI): Towards Online Explanations on Data Streams},
+	author       = {Fabian Fumagalli and Maximilian Muschalik and Eyke H{\"{u}}llermeier and Barbara Hammer},
+	year         = 2023,
+	journal      = {Mach. Learn.},
+	volume       = 112,
+	number       = 12,
+	pages        = {4863--4903},
+	doi          = {10.1007/S10994-023-06385-Y},
+	url          = {https://doi.org/10.1007/s10994-023-06385-y},
+	abbr         = {MLJ},
+	bibtex_show  = {true},
+	selected     = {true}
 }
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@inproceedings{Fumagalli.2023b,
+	title        = {{SHAP-IQ:} Unified Approximation of any-order Shapley Interactions},
+	author       = {Fabian Fumagalli and Maximilian Muschalik and Patrick Kolpaczki and Eyke H{\"{u}}llermeier and Barbara Hammer},
+	year         = 2023,
+	booktitle    = {Advances in Neural Information Processing Systems 36 (NeurIPS 2023)},
+	url          = {https://openreview.net/forum?id=IEMLNF4gK4},
+	abbr         = {NeurIPS},
+	bibtex_show  = {true},
+	selected     = {true}
 }
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{Muschalik.2023,
+	title        = {iPDP: On Partial Dependence Plots in Dynamic Modeling Scenarios},
+	author       = {Maximilian Muschalik and Fabian Fumagalli and Rohit Jagtani and Barbara Hammer and Eyke H{\"{u}}llermeier},
+	year         = 2023,
+	booktitle    = {Explainable Artificial Intelligence - First World Conference (xAI 2023)},
+	publisher    = {Springer},
+	series       = {Communications in Computer and Information Science},
+	volume       = 1901,
+	pages        = {177--194},
+	doi          = {10.1007/978-3-031-44064-9\_11},
+	url          = {https://doi.org/10.1007/978-3-031-44064-9\_11},
+	abbr         = {xAI},
+	slides       = {2023_xAI_iPDP_Presentation_slides.pdf},
+	bibtex_show  = {true},
+	selected     = {true}
 }
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{Muschalik.2023a,
+	title        = {iSAGE: An Incremental Version of {SAGE} for Online Explanation on Data Streams},
+	author       = {Maximilian Muschalik and Fabian Fumagalli and Barbara Hammer and Eyke H{\"{u}}llermeier},
+	year         = 2023,
+	booktitle    = {Machine Learning and Knowledge Discovery in Databases: Research Track - European Conference, ({ECML} {PKDD} 2023)},
+	publisher    = {Springer},
+	series       = {Lecture Notes in Computer Science},
+	volume       = 14171,
+	pages        = {428--445},
+	doi          = {10.1007/978-3-031-43418-1\_26},
+	url          = {https://doi.org/10.1007/978-3-031-43418-1\_26},
+	abbr         = {ECMLPKDD},
+	bibtex_show  = {true},
+	selected     = {true}
 }
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{Fumagalli.2024,
+	title        = {Kernel{SHAP}-{IQ}: Weighted Least Square Optimization for Shapley Interactions},
+	author       = {Fabian Fumagalli and Maximilian Muschalik and Patrick Kolpaczki and Eyke H{\"u}llermeier and Barbara Hammer},
+	year         = 2024,
+	booktitle    = {Forty-first International Conference on Machine Learning},
+	url          = {https://openreview.net/forum?id=d5jXW2H4gg},
+	abbr         = {ICML},
+	bibtex_show  = {true},
+	selected     = {true}
 }
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@inproceedings{Kolpaczki.2024,
+	title        = {{SVARM-IQ:} Efficient Approximation of Any-order Shapley Interactions through Stratification},
+	author       = {Patrick Kolpaczki and Maximilian Muschalik and Fabian Fumagalli and Barbara Hammer and Eyke H{\"{u}}llermeier},
+	year         = 2024,
+	booktitle    = {International Conference on Artificial Intelligence and Statistics (AISTATS 2024)},
+	publisher    = {{PMLR}},
+	series       = {Proceedings of Machine Learning Research},
+	volume       = 238,
+	pages        = {3520--3528},
+	url          = {https://proceedings.mlr.press/v238/kolpaczki24a.html},
+	abbr         = {AISTATS},
+	bibtex_show  = {true}
 }
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@inproceedings{Muschalik.2024,
+	title        = {Beyond TreeSHAP: Efficient Computation of Any-Order Shapley Interactions for Tree Ensembles},
+	author       = {Maximilian Muschalik and Fabian Fumagalli and Barbara Hammer and Eyke H{\"{u}}llermeier},
+	year         = 2024,
+	booktitle    = {Thirty-Eighth {AAAI} Conference on Artificial Intelligence, (AAAI 2024)},
+	publisher    = {{AAAI} Press},
+	pages        = {14388--14396},
+	doi          = {10.1609/AAAI.V38I12.29225},
+	url          = {https://doi.org/10.1609/aaai.v38i12.29225},
+	abbr         = {AAAI},
+	bibtex_show  = {true},
+	selected     = {true}
+}
+@inproceedings{muschalik2024shapiq,
+  title     = {shapiq: Shapley Interactions for Machine Learning},
+  author    = {Maximilian Muschalik and Hubert Baniecki and Fabian Fumagalli and
+               Patrick Kolpaczki and Barbara Hammer and Eyke H\"{u}llermeier},
+  booktitle = {The Thirty-eight Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
+  year      = {2024},
+  url       = {https://openreview.net/forum?id=knxGmi6SJi}
+}
+@inproceedings{DBLP:conf/ijcnn/KennewegKFH24,
+  author       = {Philip Kenneweg and
+                  Tristan Kenneweg and
+                  Fabian Fumagalli and
+                  Barbara Hammer},
+  title        = {No learning rates needed: Introducing {SALSA} - Stable Armijo Line
+                  Search Adaptation},
+  booktitle    = {International Joint Conference on Neural Networks, {IJCNN} 2024, Yokohama,
+                  Japan, June 30 - July 5, 2024},
+  pages        = {1--8},
+  publisher    = {{IEEE}},
+  year         = {2024},
+  url          = {https://doi.org/10.1109/IJCNN60899.2024.10650124},
+  doi          = {10.1109/IJCNN60899.2024.10650124},
+  bibtex_show  = {false},
+  selected     = {false},
+  abbrv        = {IJCNN}
 }
