--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,13 @@
 @inproceedings{muschalik2024shapiq,
-  title     = {shapiq: Shapley Interactions for Machine Learning},
-  author    = {Maximilian Muschalik and Hubert Baniecki and Fabian Fumagalli and
+	title     = {shapiq: Shapley Interactions for Machine Learning},
+	author    = {Maximilian Muschalik and Hubert Baniecki and Fabian Fumagalli and
                Patrick Kolpaczki and Barbara Hammer and Eyke H\"{u}llermeier},
-  booktitle = {The Thirty-eight Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
-  year      = {2024},
-  url       = {https://openreview.net/forum?id=knxGmi6SJi}
+	booktitle = {The Thirty-eight Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
+	year      = {2024},
+	url       = {https://openreview.net/forum?id=knxGmi6SJi},
+	abbr	  = {NeurIPS},
+	bibtex_show = {true},
+	selected = {true}
 }
 @inproceedings{Fumagalli.2024,
 	title        = {Kernel{SHAP}-{IQ}: Weighted Least Square Optimization for Shapley Interactions},
