--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 	booktitle = {The Thirty-eight Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
 	year      = {2024},
 	url       = {https://openreview.net/forum?id=knxGmi6SJi},
-	abbr	  = {NeurIPS},
+	abbr	  = {NeurIPS 2024},
 	bibtex_show = {true},
 	selected = {true}
 }
@@ -15,7 +15,7 @@
 	year         = 2024,
 	booktitle    = {Forty-first International Conference on Machine Learning},
 	url          = {https://openreview.net/forum?id=d5jXW2H4gg},
-	abbr         = {ICML},
+	abbr         = {ICML 2024},
 	bibtex_show  = {true},
 	selected     = {true}
 }
@@ -28,7 +28,7 @@
 	pages        = {14388--14396},
 	doi          = {10.1609/AAAI.V38I12.29225},
 	url          = {https://doi.org/10.1609/aaai.v38i12.29225},
-	abbr         = {AAAI},
+	abbr         = {AAAI 2024},
 	bibtex_show  = {true},
 	selected     = {true}
 }
@@ -42,7 +42,7 @@
 	volume       = 238,
 	pages        = {3520--3528},
 	url          = {https://proceedings.mlr.press/v238/kolpaczki24a.html},
-	abbr         = {AISTATS},
+	abbr         = {AISTATS 2024},
 	bibtex_show  = {true}
 }
 @inproceedings{Fumagalli.2023b,
@@ -51,7 +51,7 @@
 	year         = 2023,
 	booktitle    = {Advances in Neural Information Processing Systems 36 (NeurIPS 2023)},
 	url          = {https://openreview.net/forum?id=IEMLNF4gK4},
-	abbr         = {NeurIPS},
+	abbr         = {NeurIPS 2023},
 	bibtex_show  = {true},
 	selected     = {true}
 }
@@ -79,7 +79,7 @@
 	pages        = {4863--4903},
 	doi          = {10.1007/S10994-023-06385-Y},
 	url          = {https://doi.org/10.1007/s10994-023-06385-y},
-	abbr         = {MLJ},
+	abbr         = {Machine Learning Journal},
 	bibtex_show  = {true},
 	selected     = {true}
 }
@@ -110,7 +110,7 @@
 	pages        = {428--445},
 	doi          = {10.1007/978-3-031-43418-1\_26},
 	url          = {https://doi.org/10.1007/978-3-031-43418-1\_26},
-	abbr         = {ECMLPKDD},
+	abbr         = {ECML PKDD 2023},
 	bibtex_show  = {true},
 	selected     = {true}
 }
@@ -121,7 +121,7 @@
 	booktitle    = {31st European Symposium on Artificial Neural Networks, Computational Intelligence and Machine Learning ({ESANN} 2023)},
 	doi          = {10.14428/ESANN/2023.ES2023-148},
 	url          = {https://doi.org/10.14428/esann/2023.ES2023-148},
-	abbr         = {ESANN},
+	abbr         = {ESANN 2023},
 	bibtex_show  = {true}
 }
 @inproceedings{DBLP:conf/ijcnn/KennewegKFH24,
@@ -140,5 +140,5 @@
   doi          = {10.1109/IJCNN60899.2024.10650124},
   bibtex_show  = {false},
   selected     = {false},
-  abbrv        = {IJCNN}
+  abbrv        = {IJCNN 2024}
 }
