--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -79,7 +79,7 @@
 	pages        = {4863--4903},
 	doi          = {10.1007/S10994-023-06385-Y},
 	url          = {https://doi.org/10.1007/s10994-023-06385-y},
-	abbr         = {Machine Learning Journal},
+	abbr         = {MLJ},
 	bibtex_show  = {true},
 	selected     = {true}
 }
