--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -94,7 +94,7 @@
 	pages        = {177--194},
 	doi          = {10.1007/978-3-031-44064-9\_11},
 	url          = {https://doi.org/10.1007/978-3-031-44064-9\_11},
-	abbr         = {xAI},
+	abbr         = {xAI 2023},
 	slides       = {2023_xAI_iPDP_Presentation_slides.pdf},
 	bibtex_show  = {true},
 	selected     = {true}
