--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -140,5 +140,7 @@
   doi          = {10.1109/IJCNN60899.2024.10650124},
   bibtex_show  = {false},
   selected     = {false},
-  abbrv        = {IJCNN 2024}
+  abbr       = {IJCNN 2024},
+    bibtex_show  = {true},
+    selected = {true}
 }
