--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -67,7 +67,9 @@
 	abbr         = {K{\"{u}}nstliche Intell.},
 	selected     = {false},
 	website      = {https://link.springer.com/article/10.1007/s13218-022-00766-6},
-	bibtex_show  = {true}
+	bibtex_show  = {true},
+	abbr = {KI Journal},
+	selected = {true}
 }
 @article{Fumagalli.2023a,
 	title        = {Incremental Permutation Feature Importance (iPFI): Towards Online Explanations on Data Streams},
