--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,8 @@
 	url       = {https://openreview.net/forum?id=knxGmi6SJi},
 	abbr	  = {NeurIPS 2024},
 	bibtex_show = {true},
+	poster       = {2024_NeurIPS_Poster_shapiq.pdf},
+	website      = {https://github.com/mmschlk/shapiq}
 	selected = {true}
 }
 @inproceedings{Fumagalli.2024,
@@ -30,7 +32,8 @@
 	url          = {https://doi.org/10.1609/aaai.v38i12.29225},
 	abbr         = {AAAI 2024},
 	bibtex_show  = {true},
-	selected     = {true}
+	selected     = {true},
+	poster       = {2024_AAAI_TreeSHAPIQ_Poster.pdf}
 }
 @inproceedings{Kolpaczki.2024,
 	title        = {{SVARM-IQ:} Efficient Approximation of Any-order Shapley Interactions through Stratification},
@@ -73,7 +76,8 @@
 	url          = {https://openreview.net/forum?id=IEMLNF4gK4},
 	abbr         = {NeurIPS 2023},
 	bibtex_show  = {true},
-	selected     = {true}
+	selected     = {true},
+	poster       = {2023_NeurIPS_Poster_Shapiq.pdf}
 }
 @article{Fumagalli.2023a,
 	title        = {Incremental Permutation Feature Importance (iPFI): Towards Online Explanations on Data Streams},
@@ -87,7 +91,9 @@
 	url          = {https://doi.org/10.1007/s10994-023-06385-y},
 	abbr         = {MLJ},
 	bibtex_show  = {true},
-	selected     = {true}
+	selected     = {true},
+	slides       = {2023_ECML_Presentation_iPFI.pdf},
+	poster       = {2023_ECML_Poster_iPFI.pdf}
 }
 @article{Muschalik.2023,
 	title        = {iPDP: On Partial Dependence Plots in Dynamic Modeling Scenarios},
@@ -103,7 +109,8 @@
 	abbr         = {xAI 2023},
 	slides       = {2023_xAI_iPDP_Presentation_slides.pdf},
 	bibtex_show  = {true},
-	selected     = {true}
+	selected     = {true},
+	slides       = {2023_xAI_iPDP_Presentation_slides.pdf},
 }
 @inproceedings{Muschalik.2023a,
 	title        = {iSAGE: An Incremental Version of {SAGE} for Online Explanation on Data Streams},
@@ -118,7 +125,9 @@
 	url          = {https://doi.org/10.1007/978-3-031-43418-1\_26},
 	abbr         = {ECML PKDD 2023},
 	bibtex_show  = {true},
-	selected     = {true}
+	selected     = {true},
+	slides       = {2023_ECML_Presentation_iSAGE.pdf},
+	poster       = {2023_ECML_Poster_iSAGE.pdf}
 }
 @inproceedings{Fumagalli.2023,
 	title        = {On Feature Removal for Explainability in Dynamic Environments},
@@ -128,7 +137,8 @@
 	doi          = {10.14428/ESANN/2023.ES2023-148},
 	url          = {https://doi.org/10.14428/esann/2023.ES2023-148},
 	abbr         = {ESANN 2023},
-	bibtex_show  = {true}
+	bibtex_show  = {true},
+	poster       = {2023_ESANN_Poster.pdf}
 }
 @article{Muschalik.2022,
 	title        = {Agnostic Explanation of Model Change based on Feature Importance},
