--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
 	abbr	  = {NeurIPS 2024},
 	bibtex_show = {true},
 	poster       = {2024_NeurIPS_Poster_shapiq.pdf},
-	website      = {https://github.com/mmschlk/shapiq}
+	website      = {https://github.com/mmschlk/shapiq},
 	selected = {true}
 }
 @inproceedings{Fumagalli.2024,
