--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,7 +19,8 @@
 	url          = {https://openreview.net/forum?id=d5jXW2H4gg},
 	abbr         = {ICML 2024},
 	bibtex_show  = {true},
-	selected     = {true}
+	selected     = {true},
+	poster = {2024_ICML_Poster_KernelSHAPIQ.pdf}
 }
 @inproceedings{Muschalik.2024,
 	title        = {Beyond TreeSHAP: Efficient Computation of Any-Order Shapley Interactions for Tree Ensembles},
