--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
 }
 @inproceedings{Muschalik.2024,
 	title        = {Beyond TreeSHAP: Efficient Computation of Any-Order Shapley Interactions for Tree Ensembles},
-	author       = {Maximilian Muschalik and Fabian Fumagalli and Barbara Hammer and Eyke H{\"{u}}llermeier},
+	author       = {**Maximilian Muschalik$^*$** and **Fabian Fumagalli$^*$** and Barbara Hammer and Eyke H{\"{u}}llermeier},
 	year         = 2024,
 	booktitle    = {Thirty-Eighth {AAAI} Conference on Artificial Intelligence, (AAAI 2024)},
 	publisher    = {{AAAI} Press},
@@ -34,7 +34,8 @@
 	abbr         = {AAAI 2024},
 	bibtex_show  = {true},
 	selected     = {true},
-	poster       = {2024_AAAI_TreeSHAPIQ_Poster.pdf}
+	poster       = {2024_AAAI_TreeSHAPIQ_Poster.pdf},
+	annotation = {$^*$ denotes equal contribution}
 }
 @inproceedings{Kolpaczki.2024,
 	title        = {{SVARM-IQ:} Efficient Approximation of Any-order Shapley Interactions through Stratification},
