--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
 }
 @inproceedings{Muschalik.2024,
 	title        = {Beyond TreeSHAP: Efficient Computation of Any-Order Shapley Interactions for Tree Ensembles},
-	author       = {Maximilian Muschalik* and **Fabian Fumagalli* and Barbara Hammer and Eyke H{\"{u}}llermeier},
+	author       = {<b>Maximilian Muschalik and Fabian Fumagalli</b> and Barbara Hammer and Eyke H{\"{u}}llermeier},
 	year         = 2024,
 	booktitle    = {Thirty-Eighth {AAAI} Conference on Artificial Intelligence, (AAAI 2024)},
 	publisher    = {{AAAI} Press},
