--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
 }
 @inproceedings{Muschalik.2024,
 	title        = {Beyond TreeSHAP: Efficient Computation of Any-Order Shapley Interactions for Tree Ensembles},
-	author       = {<b>Maximilian Muschalik and Fabian Fumagalli</b> and Barbara Hammer and Eyke H{\"{u}}llermeier},
+	author       = {Maximilian Muschalik* and Fabian Fumagalli* and Barbara Hammer and Eyke H{\"{u}}llermeier},
 	year         = 2024,
 	booktitle    = {Thirty-Eighth {AAAI} Conference on Artificial Intelligence, (AAAI 2024)},
 	publisher    = {{AAAI} Press},
@@ -72,18 +72,19 @@
 }
 @inproceedings{Fumagalli.2023b,
 	title        = {{SHAP-IQ:} Unified Approximation of any-order Shapley Interactions},
-	author       = {Fabian Fumagalli and Maximilian Muschalik and Patrick Kolpaczki and Eyke H{\"{u}}llermeier and Barbara Hammer},
+	author       = {Fabian Fumagalli* and Maximilian Muschalik* and Patrick Kolpaczki and Eyke H{\"{u}}llermeier and Barbara Hammer},
 	year         = 2023,
 	booktitle    = {Advances in Neural Information Processing Systems 36 (NeurIPS 2023)},
 	url          = {https://openreview.net/forum?id=IEMLNF4gK4},
 	abbr         = {NeurIPS 2023},
 	bibtex_show  = {true},
 	selected     = {true},
-	poster       = {2023_NeurIPS_Poster_Shapiq.pdf}
+	poster       = {2023_NeurIPS_Poster_Shapiq.pdf},
+	annotation   = {* denotes equal contribution}
 }
 @article{Fumagalli.2023a,
 	title        = {Incremental Permutation Feature Importance (iPFI): Towards Online Explanations on Data Streams},
-	author       = {Fabian Fumagalli and Maximilian Muschalik and Eyke H{\"{u}}llermeier and Barbara Hammer},
+	author       = {Fabian Fumagalli* and Maximilian Muschalik* and Eyke H{\"{u}}llermeier and Barbara Hammer},
 	year         = 2023,
 	journal      = {Mach. Learn.},
 	volume       = 112,
@@ -94,12 +95,13 @@
 	abbr         = {MLJ},
 	bibtex_show  = {true},
 	selected     = {true},
+	annotation   = {* denotes equal contribution},
 	slides       = {2023_ECML_Presentation_iPFI.pdf},
 	poster       = {2023_ECML_Poster_iPFI.pdf}
 }
 @article{Muschalik.2023,
 	title        = {iPDP: On Partial Dependence Plots in Dynamic Modeling Scenarios},
-	author       = {Maximilian Muschalik and Fabian Fumagalli and Rohit Jagtani and Barbara Hammer and Eyke H{\"{u}}llermeier},
+	author       = {Maximilian Muschalik* and Fabian Fumagalli* and Rohit Jagtani and Barbara Hammer and Eyke H{\"{u}}llermeier},
 	year         = 2023,
 	booktitle    = {Explainable Artificial Intelligence - First World Conference (xAI 2023)},
 	publisher    = {Springer},
@@ -112,11 +114,12 @@
 	slides       = {2023_xAI_iPDP_Presentation_slides.pdf},
 	bibtex_show  = {true},
 	selected     = {true},
+	annotation   = {* denotes equal contribution},
 	slides       = {2023_xAI_iPDP_Presentation_slides.pdf},
 }
 @inproceedings{Muschalik.2023a,
 	title        = {iSAGE: An Incremental Version of {SAGE} for Online Explanation on Data Streams},
-	author       = {Maximilian Muschalik and Fabian Fumagalli and Barbara Hammer and Eyke H{\"{u}}llermeier},
+	author       = {Maximilian Muschalik* and Fabian Fumagalli* and Barbara Hammer and Eyke H{\"{u}}llermeier},
 	year         = 2023,
 	booktitle    = {Machine Learning and Knowledge Discovery in Databases: Research Track - European Conference, ({ECML} {PKDD} 2023)},
 	publisher    = {Springer},
@@ -128,23 +131,25 @@
 	abbr         = {ECML PKDD 2023},
 	bibtex_show  = {true},
 	selected     = {true},
+	annotation   = {* denotes equal contribution},
 	slides       = {2023_ECML_Presentation_iSAGE.pdf},
 	poster       = {2023_ECML_Poster_iSAGE.pdf}
 }
 @inproceedings{Fumagalli.2023,
 	title        = {On Feature Removal for Explainability in Dynamic Environments},
-	author       = {Fabian Fumagalli and Maximilian Muschalik and Eyke H{\"{u}}llermeier and Barbara Hammer},
+	author       = {Fabian Fumagalli* and Maximilian Muschalik* and Eyke H{\"{u}}llermeier and Barbara Hammer},
 	year         = 2023,
 	booktitle    = {31st European Symposium on Artificial Neural Networks, Computational Intelligence and Machine Learning ({ESANN} 2023)},
 	doi          = {10.14428/ESANN/2023.ES2023-148},
 	url          = {https://doi.org/10.14428/esann/2023.ES2023-148},
 	abbr         = {ESANN 2023},
 	bibtex_show  = {true},
+	annotation   = {* denotes equal contribution},
 	poster       = {2023_ESANN_Poster.pdf}
 }
 @article{Muschalik.2022,
 	title        = {Agnostic Explanation of Model Change based on Feature Importance},
-	author       = {Maximilian Muschalik and Fabian Fumagalli and Barbara Hammer and Eyke H{\"{u}}llermeier},
+	author       = {Maximilian Muschalik* and Fabian Fumagalli* and Barbara Hammer and Eyke H{\"{u}}llermeier},
 	year         = 2022,
 	journal      = {K{\"{u}}nstliche Intell.},
 	volume       = 36,
@@ -155,6 +160,7 @@
 	selected     = {false},
 	website      = {https://link.springer.com/article/10.1007/s13218-022-00766-6},
 	bibtex_show  = {true},
+	annotation   = {* denotes equal contribution},
 	abbr = {KI Journal},
 	selected = {true}
 }
