--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,7 +35,7 @@
 	bibtex_show  = {true},
 	selected     = {true},
 	poster       = {2024_AAAI_TreeSHAPIQ_Poster.pdf},
-	annotation = {* denotes equal contribution}
+	annotation = {* equal contribution}
 }
 @inproceedings{Kolpaczki.2024,
 	title        = {{SVARM-IQ:} Efficient Approximation of Any-order Shapley Interactions through Stratification},
@@ -80,7 +80,7 @@
 	bibtex_show  = {true},
 	selected     = {true},
 	poster       = {2023_NeurIPS_Poster_Shapiq.pdf},
-	annotation   = {* denotes equal contribution}
+	annotation   = {* equal contribution}
 }
 @article{Fumagalli.2023a,
 	title        = {Incremental Permutation Feature Importance (iPFI): Towards Online Explanations on Data Streams},
@@ -95,7 +95,7 @@
 	abbr         = {MLJ},
 	bibtex_show  = {true},
 	selected     = {true},
-	annotation   = {* denotes equal contribution},
+	annotation   = {* equal contribution},
 	slides       = {2023_ECML_Presentation_iPFI.pdf},
 	poster       = {2023_ECML_Poster_iPFI.pdf}
 }
@@ -114,7 +114,7 @@
 	slides       = {2023_xAI_iPDP_Presentation_slides.pdf},
 	bibtex_show  = {true},
 	selected     = {true},
-	annotation   = {* denotes equal contribution},
+	annotation   = {* equal contribution},
 	slides       = {2023_xAI_iPDP_Presentation_slides.pdf},
 }
 @inproceedings{Muschalik.2023a,
@@ -131,7 +131,7 @@
 	abbr         = {ECML PKDD 2023},
 	bibtex_show  = {true},
 	selected     = {true},
-	annotation   = {* denotes equal contribution},
+	annotation   = {* equal contribution},
 	slides       = {2023_ECML_Presentation_iSAGE.pdf},
 	poster       = {2023_ECML_Poster_iSAGE.pdf}
 }
@@ -144,7 +144,7 @@
 	url          = {https://doi.org/10.14428/esann/2023.ES2023-148},
 	abbr         = {ESANN 2023},
 	bibtex_show  = {true},
-	annotation   = {* denotes equal contribution},
+	annotation   = {* equal contribution},
 	poster       = {2023_ESANN_Poster.pdf}
 }
 @article{Muschalik.2022,
@@ -160,7 +160,7 @@
 	selected     = {false},
 	website      = {https://link.springer.com/article/10.1007/s13218-022-00766-6},
 	bibtex_show  = {true},
-	annotation   = {* denotes equal contribution},
+	annotation   = {* equal contribution},
 	abbr = {KI Journal},
 	selected = {true}
 }
