--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,7 +48,8 @@
 	pages        = {3520--3528},
 	url          = {https://proceedings.mlr.press/v238/kolpaczki24a.html},
 	abbr         = {AISTATS 2024},
-	bibtex_show  = {true}
+	bibtex_show  = {true},
+	selected     = {true},
 }
 @inproceedings{DBLP:conf/ijcnn/KennewegKFH24,
   author       = {Philip Kenneweg and
