--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 	title     = {shapiq: Shapley Interactions for Machine Learning},
 	author    = {Maximilian Muschalik and Hubert Baniecki and Fabian Fumagalli and
                Patrick Kolpaczki and Barbara Hammer and Eyke H\"{u}llermeier},
-	booktitle = {The Thirty-eight Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
+	booktitle = {The Thirty-eight Conference on Neural Information Processing Systems (NeurIPS) Datasets and Benchmarks Track},
 	year      = {2024},
 	url       = {https://openreview.net/forum?id=knxGmi6SJi},
 	abbr	  = {NeurIPS 2024},
@@ -15,7 +15,7 @@
 	title        = {Kernel{SHAP}-{IQ}: Weighted Least Square Optimization for Shapley Interactions},
 	author       = {Fabian Fumagalli and Maximilian Muschalik and Patrick Kolpaczki and Eyke H{\"u}llermeier and Barbara Hammer},
 	year         = 2024,
-	booktitle    = {Forty-first International Conference on Machine Learning},
+	booktitle    = {Forty-first International Conference on Machine Learning (ICML)},
 	url          = {https://openreview.net/forum?id=d5jXW2H4gg},
 	abbr         = {ICML 2024},
 	bibtex_show  = {true},
@@ -26,7 +26,7 @@
 	title        = {Beyond TreeSHAP: Efficient Computation of Any-Order Shapley Interactions for Tree Ensembles},
 	author       = {Maximilian Muschalik* and Fabian Fumagalli* and Barbara Hammer and Eyke H{\"{u}}llermeier},
 	year         = 2024,
-	booktitle    = {Thirty-Eighth {AAAI} Conference on Artificial Intelligence, (AAAI 2024)},
+	booktitle    = {Thirty-Eighth {AAAI} Conference on Artificial Intelligence, (AAAI)},
 	publisher    = {{AAAI} Press},
 	pages        = {14388--14396},
 	doi          = {10.1609/AAAI.V38I12.29225},
@@ -41,7 +41,7 @@
 	title        = {{SVARM-IQ:} Efficient Approximation of Any-order Shapley Interactions through Stratification},
 	author       = {Patrick Kolpaczki and Maximilian Muschalik and Fabian Fumagalli and Barbara Hammer and Eyke H{\"{u}}llermeier},
 	year         = 2024,
-	booktitle    = {International Conference on Artificial Intelligence and Statistics (AISTATS 2024)},
+	booktitle    = {International Conference on Artificial Intelligence and Statistics (AISTATS)},
 	publisher    = {{PMLR}},
 	series       = {Proceedings of Machine Learning Research},
 	volume       = 238,
@@ -58,8 +58,8 @@
                   Barbara Hammer},
   title        = {No learning rates needed: Introducing {SALSA} - Stable Armijo Line
                   Search Adaptation},
-  booktitle    = {International Joint Conference on Neural Networks, {IJCNN} 2024, Yokohama,
-                  Japan, June 30 - July 5, 2024},
+  year         = 2024,
+  booktitle    = {International Joint Conference on Neural Networks, {(IJCNN)}},
   pages        = {1--8},
   publisher    = {{IEEE}},
   year         = {2024},
@@ -75,7 +75,7 @@
 	title        = {{SHAP-IQ:} Unified Approximation of any-order Shapley Interactions},
 	author       = {Fabian Fumagalli* and Maximilian Muschalik* and Patrick Kolpaczki and Eyke H{\"{u}}llermeier and Barbara Hammer},
 	year         = 2023,
-	booktitle    = {Advances in Neural Information Processing Systems 36 (NeurIPS 2023)},
+	booktitle    = {Advances in Neural Information Processing Systems 36 (NeurIPS)},
 	url          = {https://openreview.net/forum?id=IEMLNF4gK4},
 	abbr         = {NeurIPS 2023},
 	bibtex_show  = {true},
@@ -87,7 +87,7 @@
 	title        = {Incremental Permutation Feature Importance (iPFI): Towards Online Explanations on Data Streams},
 	author       = {Fabian Fumagalli* and Maximilian Muschalik* and Eyke H{\"{u}}llermeier and Barbara Hammer},
 	year         = 2023,
-	journal      = {Mach. Learn.},
+	journal      = {Machine Learning},
 	volume       = 112,
 	number       = 12,
 	pages        = {4863--4903},
@@ -104,7 +104,7 @@
 	title        = {iPDP: On Partial Dependence Plots in Dynamic Modeling Scenarios},
 	author       = {Maximilian Muschalik* and Fabian Fumagalli* and Rohit Jagtani and Barbara Hammer and Eyke H{\"{u}}llermeier},
 	year         = 2023,
-	booktitle    = {Explainable Artificial Intelligence - First World Conference (xAI 2023)},
+	booktitle    = {World Conference of Explainable Artificial Intelligence (xAI)},
 	publisher    = {Springer},
 	series       = {Communications in Computer and Information Science},
 	volume       = 1901,
@@ -121,11 +121,11 @@
 @inproceedings{Muschalik.2023a,
 	title        = {iSAGE: An Incremental Version of {SAGE} for Online Explanation on Data Streams},
 	author       = {Maximilian Muschalik* and Fabian Fumagalli* and Barbara Hammer and Eyke H{\"{u}}llermeier},
-	year         = 2023,
-	booktitle    = {Machine Learning and Knowledge Discovery in Databases: Research Track - European Conference, ({ECML} {PKDD} 2023)},
+	booktitle    = {Machine Learning and Knowledge Discovery in Databases: Research Track - European Conference, ({ECML} {PKDD})},
 	publisher    = {Springer},
 	series       = {Lecture Notes in Computer Science},
 	volume       = 14171,
+	year         = 2023,
 	pages        = {428--445},
 	doi          = {10.1007/978-3-031-43418-1\_26},
 	url          = {https://doi.org/10.1007/978-3-031-43418-1\_26},
@@ -140,7 +140,7 @@
 	title        = {On Feature Removal for Explainability in Dynamic Environments},
 	author       = {Fabian Fumagalli* and Maximilian Muschalik* and Eyke H{\"{u}}llermeier and Barbara Hammer},
 	year         = 2023,
-	booktitle    = {31st European Symposium on Artificial Neural Networks, Computational Intelligence and Machine Learning ({ESANN} 2023)},
+	booktitle    = {31st European Symposium on Artificial Neural Networks, Computational Intelligence and Machine Learning ({ESANN})},
 	doi          = {10.14428/ESANN/2023.ES2023-148},
 	url          = {https://doi.org/10.14428/esann/2023.ES2023-148},
 	abbr         = {ESANN 2023},
@@ -152,7 +152,7 @@
 	title        = {Agnostic Explanation of Model Change based on Feature Importance},
 	author       = {Maximilian Muschalik* and Fabian Fumagalli* and Barbara Hammer and Eyke H{\"{u}}llermeier},
 	year         = 2022,
-	journal      = {K{\"{u}}nstliche Intell.},
+	journal      = {K{\"{u}}nstliche Intelligenz},
 	volume       = 36,
 	number       = 3,
 	pages        = {211--224},
