--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -100,7 +100,7 @@
 	slides       = {2023_ECML_Presentation_iPFI.pdf},
 	poster       = {2023_ECML_Poster_iPFI.pdf}
 }
-@article{Muschalik.2023,
+@inproceedings{Muschalik.2023,
 	title        = {iPDP: On Partial Dependence Plots in Dynamic Modeling Scenarios},
 	author       = {Maximilian Muschalik* and Fabian Fumagalli* and Rohit Jagtani and Barbara Hammer and Eyke H{\"{u}}llermeier},
 	year         = 2023,
