--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,15 @@
+@inproceedings{fumagalli2024unifyingfeaturebasedexplanationsfunctional,
+      title={Unifying Feature-Based Explanations with Functional ANOVA and Cooperative Game Theory},
+      author={Fabian Fumagalli and Maximilian Muschalik and Eyke Hüllermeier and Barbara Hammer and Julia Herbinger},
+      year={2024},
+      eprint={2412.17152},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      abbr	  = {Preprint},
+	bibtex_show = {true},
+	selected = {true}
+}
+
 @inproceedings{muschalik2024shapiq,
 	title     = {shapiq: Shapley Interactions for Machine Learning},
 	author    = {Maximilian Muschalik and Hubert Baniecki and Fabian Fumagalli and
