--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,8 +3,7 @@
       author={Fabian Fumagalli and Maximilian Muschalik and Eyke Hüllermeier and Barbara Hammer and Julia Herbinger},
       year={2024},
       eprint={2412.17152},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG},
+      booktitle={arXiv, cs.LG},
       abbr	  = {Preprint},
 	bibtex_show = {true},
 	selected = {true}
