--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
       year={2024},
       eprint={2412.17152},
       booktitle={arXiv, cs.LG},
+      website = {https://arxiv.org/abs/2412.17152},
       abbr	  = {Preprint},
 	bibtex_show = {true},
 	selected = {true}
