--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,10 @@
 @inproceedings{fumagalli2024unifyingfeaturebasedexplanationsfunctional,
       title={Unifying Feature-Based Explanations with Functional ANOVA and Cooperative Game Theory},
       author={Fabian Fumagalli and Maximilian Muschalik and Eyke Hüllermeier and Barbara Hammer and Julia Herbinger},
-      year={2024},
-      eprint={2412.17152},
-      booktitle={arXiv, cs.LG},
+      booktitle={The 28th International Conference on Artificial Intelligence and Statistics},
+      year={2025},
       website = {https://arxiv.org/abs/2412.17152},
-      abbr	  = {Preprint},
+      abbr	  = {AISTATS 2025},
 	bibtex_show = {true},
 	selected = {true}
 }
