--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,25 @@
+@inproceedings{
+anonymous2025adaptive,
+title={Adaptive Prompting: Ad-hoc Prompt Composition for Social Bias Detection},
+author={Maximilian Splieth\"{o}ver and Tim Knebler and Fabian Fumagalli and Maximilian Muschalik and Barbara Eva Hammer and Eyke H\"{u}llermeier and Henning Wachsmuth},
+booktitle={The 2025 Annual Conference of the Nations of the Americas Chapter of the ACL},
+year={2025},
+url={https://openreview.net/forum?id=epbOeozRRX},
+bibtex_show = {true},
+abbr = {NAACL 2025},
+selected = {true}
+}
+@inproceedings{
+fumagalli2025exact,
+title={Exact Computation of Any-Order Shapley Interactions for Graph Neural Networks},
+author={Maximilian Muschalik and Fabian Fumagalli and Paolo Frazzetto and Janine Strotherm and Luca Hermes and Alessandro Sperduti and Eyke H{\"u}llermeier and Barbara Hammer},
+booktitle={The Thirteenth International Conference on Learning Representations},
+year={2025},
+url={https://openreview.net/forum?id=9tKC0YM8sX},
+bibtex_show = {true},
+abbr = {ICLR 2025},
+selected = {true}
+}
 @inproceedings{fumagalli2024unifyingfeaturebasedexplanationsfunctional,
       title={Unifying Feature-Based Explanations with Functional ANOVA and Cooperative Game Theory},
       author={Fabian Fumagalli and Maximilian Muschalik and Eyke Hüllermeier and Barbara Hammer and Julia Herbinger},
