--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,13 +12,14 @@ selected = {true}
 @inproceedings{
 fumagalli2025exact,
 title={Exact Computation of Any-Order Shapley Interactions for Graph Neural Networks},
-author={Maximilian Muschalik and Fabian Fumagalli and Paolo Frazzetto and Janine Strotherm and Luca Hermes and Alessandro Sperduti and Eyke H{\"u}llermeier and Barbara Hammer},
+author={Maximilian Muschalik* and Fabian Fumagalli* and Paolo Frazzetto and Janine Strotherm and Luca Hermes and Alessandro Sperduti and Eyke H{\"u}llermeier and Barbara Hammer},
 booktitle={The Thirteenth International Conference on Learning Representations},
 year={2025},
 url={https://openreview.net/forum?id=9tKC0YM8sX},
 bibtex_show = {true},
 abbr = {ICLR 2025},
-selected = {true}
+selected = {true},
+annotation = {* equal contribution}
 }
 @inproceedings{fumagalli2024unifyingfeaturebasedexplanationsfunctional,
       title={Unifying Feature-Based Explanations with Functional ANOVA and Cooperative Game Theory},
