--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,45 @@
+@inproceedings{Baniecki.2025b,
+  title={{Explaining Similarity in Vision-Language Encoders with Weighted Banzhaf Interactions}},
+  author={Baniecki, Hubert and Muschalik, Maximilian and Fumagalli, Fabian and Hammer, Barbara and H{\"u}llermeier, Eyke and Biecek, Przemyslaw},
+  booktitle={Proceedings of Advances in Neural Information Processing Systems {(NeurIPS)}},
+  year={2025},
+    abbrv={NeurIPS 2025}
+}
+
+@inproceedings{Wever.2025,
+      title={{HyperSHAP: Shapley Values and Interactions for Hyperparameter Importance}}, 
+      author={Marcel Wever and Maximilian Muschalik and Fabian Fumagalli and Marius Lindauer},
+      year={2025},
+      booktitle = {Fortieth {AAAI} Conference on Artificial Intelligence, (AAAI)},
+        publisher = {{AAAI} Press},
+    url = {https://arxiv.org/abs/2502.01276},
+    abbrv= {AAAI 2026 (Oral)},
+}
+
+@inproceedings{Sengupta.2025,
+    title = "Investigating the Impact of Conceptual Metaphors on {LLM}-based {NLI} through Shapley Interactions",
+    author = {Sengupta, Meghdut  and
+      Muschalik, Maximilian  and
+      Fumagalli, Fabian  and
+      Hammer, Barbara  and
+      H{\"u}llermeier, Eyke  and
+      Ghosh, Debanjan  and
+      Wachsmuth, Henning},
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2025",
+    year = "2025",
+    pages = "17393--17403",
+    abbrv = {EMNLP 2025},
+}
+
 @inproceedings{
 anonymous2025adaptive,
 title={Adaptive Prompting: Ad-hoc Prompt Composition for Social Bias Detection},
 author={Maximilian Splieth\"{o}ver and Tim Knebler and Fabian Fumagalli and Maximilian Muschalik and Barbara Eva Hammer and Eyke H\"{u}llermeier and Henning Wachsmuth},
 booktitle={The 2025 Annual Conference of the Nations of the Americas Chapter of the ACL},
 year={2025},
-url={https://openreview.net/forum?id=epbOeozRRX},
+url={https://aclanthology.org/2025.naacl-long.122/},
 bibtex_show = {true},
-abbr = {NAACL 2025},
+abbr = {NAACL 2025 (Oral)},
 selected = {true}
 }
 @inproceedings{
