--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,8 @@
   author={Baniecki, Hubert and Muschalik, Maximilian and Fumagalli, Fabian and Hammer, Barbara and H{\"u}llermeier, Eyke and Biecek, Przemyslaw},
   booktitle={Proceedings of Advances in Neural Information Processing Systems {(NeurIPS)}},
   year={2025},
-    abbrv={NeurIPS 2025}
+    abbr ={NeurIPS 2025},
+    selected = {true}
 }
 
 @inproceedings{Wever.2025,
@@ -13,7 +14,8 @@
       booktitle = {Fortieth {AAAI} Conference on Artificial Intelligence, (AAAI)},
         publisher = {{AAAI} Press},
     url = {https://arxiv.org/abs/2502.01276},
-    abbrv= {AAAI 2026 (Oral)},
+    abbr = {AAAI 2026 (Oral)},
+    selected = {true},
 }
 
 @inproceedings{Sengupta.2025,
@@ -28,7 +30,8 @@
     booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2025",
     year = "2025",
     pages = "17393--17403",
-    abbrv = {EMNLP 2025},
+    abbr = {EMNLP 2025},
+    selected = {true},
 }
 
 @inproceedings{
