--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,43 @@
+@phdthesis{Fumagalli.2025,
+  title  = {{Explainable AI: A Unified Approach Based on Cooperative Game Theory}},
+  author = {Fumagalli, Fabian},
+  school = {Bielefeld University},
+  year   = {2025},
+  selected = {true},
+  abbrv = {PhD Thesis}
+}
+@inproceedings{Fumagalli.2026,
+	title        = {{PolySHAP: Extending KernelSHAP with Interaction-Informed Polynomial Regression}},
+	author       = {Fabian Fumagalli and R. Teal Witter and Christopher Musco},
+	year         = 2026,
+	booktitle    = {Proceedings of the International Conference on Learning Representations ({ICLR})},
+    selected = {true},
+	abbrv = {ICLR 2026},
+}
+@inproceedings{
+Herbinger.2026,
+title={{GRANITE: A Generalized Regional Framework for Identifying Agreement in Feature-Based Explanations}},
+author={Julia Herbinger and Gabriel Laberge and Maximilian Muschalik and Yann Pequignot and Marvin N. Wright and Fabian Fumagalli},
+booktitle={{Proceedings of the International Conference on Artificial Intelligence and Statistics (AISTATS)}},
+year={2026},
+selected = {true},
+abbrv = {AISTATS 2026},
+}
+@misc{Fumagalli.2026b,
+      title={{An Odd Estimator for Shapley Values}},
+      author={Fabian Fumagalli and Landon Butler and Justin Singh Kang and Kannan Ramchandran and R. Teal Witter},
+      year={2026},
+      journal = {CoRR},
+      volume = {abs/2602.01399},
+      eprinttype = {arXiv},
+      eprint={2602.01399},
+	  aabr = {Preprint},
+      selected = {true}
+}
+
+
+
+
 @inproceedings{Baniecki.2025b,
   title={{Explaining Similarity in Vision-Language Encoders with Weighted Banzhaf Interactions}},
   author={Baniecki, Hubert and Muschalik, Maximilian and Fumagalli, Fabian and Hammer, Barbara and H{\"u}llermeier, Eyke and Biecek, Przemyslaw},
