--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,8 @@
   school = {Bielefeld University},
   year   = {2025},
   selected = {true},
-  abbrv = {PhD Thesis}
+  abbr = {PhD Thesis},
+	url = {https://pub.uni-bielefeld.de/download/3006445/3006446/Thesis_Fabian_Fumagalli_final.pdf},
 }
 @inproceedings{Fumagalli.2026,
 	title        = {{PolySHAP: Extending KernelSHAP with Interaction-Informed Polynomial Regression}},
@@ -12,7 +13,8 @@
 	year         = 2026,
 	booktitle    = {Proceedings of the International Conference on Learning Representations ({ICLR})},
     selected = {true},
-	abbrv = {ICLR 2026},
+	abbr = {ICLR 2026},
+	url = {https://openreview.net/forum?id=M19J8UGguq},
 }
 @inproceedings{
 Herbinger.2026,
@@ -21,7 +23,8 @@ author={Julia Herbinger and Gabriel Laberge and Maximilian Muschalik and Yann Pe
 booktitle={{Proceedings of the International Conference on Artificial Intelligence and Statistics (AISTATS)}},
 year={2026},
 selected = {true},
-abbrv = {AISTATS 2026},
+url = {https://arxiv.org/abs/2601.22771},
+abbr = {AISTATS 2026},
 }
 @misc{Fumagalli.2026b,
       title={{An Odd Estimator for Shapley Values}},
@@ -32,18 +35,16 @@ abbrv = {AISTATS 2026},
       eprinttype = {arXiv},
       eprint={2602.01399},
 	  aabr = {Preprint},
+      url = {https://www.arxiv.org/abs/2602.01399},
       selected = {true}
 }
-
-
-
-
 @inproceedings{Baniecki.2025b,
   title={{Explaining Similarity in Vision-Language Encoders with Weighted Banzhaf Interactions}},
   author={Baniecki, Hubert and Muschalik, Maximilian and Fumagalli, Fabian and Hammer, Barbara and H{\"u}llermeier, Eyke and Biecek, Przemyslaw},
   booktitle={Proceedings of Advances in Neural Information Processing Systems {(NeurIPS)}},
   year={2025},
     abbr ={NeurIPS 2025},
+  url = {https://openreview.net/forum?id=on22Rx5A4F},
     selected = {true}
 }
 
