--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -71,6 +71,7 @@ abbr = {AISTATS 2026},
     booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2025",
     year = "2025",
     pages = "17393--17403",
+	url = {https://aclanthology.org/2025.findings-emnlp.942/},
     abbr = {EMNLP 2025},
     selected = {true},
 }
