--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,14 @@
-@phdthesis{Fumagalli.2025,
-  title  = {{Explainable AI: A Unified Approach Based on Cooperative Game Theory}},
-  author = {Fumagalli, Fabian},
-  school = {Bielefeld University},
-  year   = {2025},
-  selected = {true},
-  abbr = {PhD Thesis},
-	url = {https://pub.uni-bielefeld.de/download/3006445/3006446/Thesis_Fabian_Fumagalli_final.pdf},
+@misc{Fumagalli.2026b,
+      title={{An Odd Estimator for Shapley Values}},
+      author={Fabian Fumagalli and Landon Butler and Justin Singh Kang and Kannan Ramchandran and R. Teal Witter},
+      year={2026},
+      journal = {CoRR},
+      volume = {abs/2602.01399},
+      eprinttype = {arXiv},
+      eprint={2602.01399},
+	  abbr = {Preprint},
+      url = {https://www.arxiv.org/abs/2602.01399},
+      selected = {true}
 }
 @inproceedings{Fumagalli.2026,
 	title        = {{PolySHAP: Extending KernelSHAP with Interaction-Informed Polynomial Regression}},
@@ -26,17 +29,14 @@ selected = {true},
 url = {https://arxiv.org/abs/2601.22771},
 abbr = {AISTATS 2026},
 }
-@misc{Fumagalli.2026b,
-      title={{An Odd Estimator for Shapley Values}},
-      author={Fabian Fumagalli and Landon Butler and Justin Singh Kang and Kannan Ramchandran and R. Teal Witter},
-      year={2026},
-      journal = {CoRR},
-      volume = {abs/2602.01399},
-      eprinttype = {arXiv},
-      eprint={2602.01399},
-	  aabr = {Preprint},
-      url = {https://www.arxiv.org/abs/2602.01399},
-      selected = {true}
+@phdthesis{Fumagalli.2025,
+  title  = {{Explainable AI: A Unified Approach Based on Cooperative Game Theory}},
+  author = {Fumagalli, Fabian},
+  school = {Bielefeld University},
+  year   = {2025},
+  selected = {true},
+  abbr = {PhD Thesis},
+	url = {https://pub.uni-bielefeld.de/download/3006445/3006446/Thesis_Fabian_Fumagalli_final.pdf},
 }
 @inproceedings{Baniecki.2025b,
   title={{Explaining Similarity in Vision-Language Encoders with Weighted Banzhaf Interactions}},
