--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
       eprinttype = {arXiv},
       eprint={2602.01399},
 	  abbr = {Preprint},
-      url = {https://www.arxiv.org/abs/2602.01399},
+      pdf = {https://www.arxiv.org/abs/2602.01399},
       selected = {true}
 }
 @inproceedings{Fumagalli.2026,
@@ -17,7 +17,7 @@
 	booktitle    = {Proceedings of the International Conference on Learning Representations ({ICLR})},
     selected = {true},
 	abbr = {ICLR 2026},
-	url = {https://openreview.net/forum?id=M19J8UGguq},
+	pdf = {https://openreview.net/forum?id=M19J8UGguq},
 }
 @inproceedings{
 Herbinger.2026,
@@ -26,7 +26,7 @@ author={Julia Herbinger and Gabriel Laberge and Maximilian Muschalik and Yann Pe
 booktitle={{Proceedings of the International Conference on Artificial Intelligence and Statistics (AISTATS)}},
 year={2026},
 selected = {true},
-url = {https://arxiv.org/abs/2601.22771},
+pdf = {https://arxiv.org/abs/2601.22771},
 abbr = {AISTATS 2026},
 }
 @phdthesis{Fumagalli.2025,
@@ -36,7 +36,7 @@ abbr = {AISTATS 2026},
   year   = {2025},
   selected = {true},
   abbr = {PhD Thesis},
-	url = {https://pub.uni-bielefeld.de/download/3006445/3006446/Thesis_Fabian_Fumagalli_final.pdf},
+	pdf = {https://pub.uni-bielefeld.de/download/3006445/3006446/Thesis_Fabian_Fumagalli_final.pdf},
 }
 @inproceedings{Baniecki.2025b,
   title={{Explaining Similarity in Vision-Language Encoders with Weighted Banzhaf Interactions}},
@@ -44,7 +44,7 @@ abbr = {AISTATS 2026},
   booktitle={Proceedings of Advances in Neural Information Processing Systems {(NeurIPS)}},
   year={2025},
     abbr ={NeurIPS 2025},
-  url = {https://openreview.net/forum?id=on22Rx5A4F},
+  pdf = {https://openreview.net/forum?id=on22Rx5A4F},
     selected = {true}
 }
 
@@ -54,7 +54,7 @@ abbr = {AISTATS 2026},
       year={2026},
       booktitle = {Fortieth {AAAI} Conference on Artificial Intelligence, (AAAI)},
         publisher = {{AAAI} Press},
-    url = {https://arxiv.org/abs/2502.01276},
+    pdf = {https://arxiv.org/abs/2502.01276},
     abbr = {AAAI 2026 (Oral)},
     selected = {true},
 }
@@ -71,7 +71,7 @@ abbr = {AISTATS 2026},
     booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2025",
     year = "2025",
     pages = "17393--17403",
-	url = {https://aclanthology.org/2025.findings-emnlp.942/},
+	website = {https://aclanthology.org/2025.findings-emnlp.942/},
     abbr = {EMNLP 2025},
     selected = {true},
 }
@@ -82,7 +82,7 @@ title={Adaptive Prompting: Ad-hoc Prompt Composition for Social Bias Detection},
 author={Maximilian Splieth\"{o}ver and Tim Knebler and Fabian Fumagalli and Maximilian Muschalik and Barbara Eva Hammer and Eyke H\"{u}llermeier and Henning Wachsmuth},
 booktitle={The 2025 Annual Conference of the Nations of the Americas Chapter of the ACL},
 year={2025},
-url={https://aclanthology.org/2025.naacl-long.122/},
+website={https://aclanthology.org/2025.naacl-long.122/},
 bibtex_show = {true},
 abbr = {NAACL 2025 (Oral)},
 selected = {true}
@@ -93,7 +93,7 @@ title={Exact Computation of Any-Order Shapley Interactions for Graph Neural Netw
 author={Maximilian Muschalik* and Fabian Fumagalli* and Paolo Frazzetto and Janine Strotherm and Luca Hermes and Alessandro Sperduti and Eyke H{\"u}llermeier and Barbara Hammer},
 booktitle={The Thirteenth International Conference on Learning Representations},
 year={2025},
-url={https://openreview.net/forum?id=9tKC0YM8sX},
+website={https://openreview.net/forum?id=9tKC0YM8sX},
 bibtex_show = {true},
 abbr = {ICLR 2025},
 selected = {true},
