--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -71,7 +71,7 @@ abbr = {AISTATS 2026},
     booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2025",
     year = "2025",
     pages = "17393--17403",
-	website = {https://aclanthology.org/2025.findings-emnlp.942/},
+	pdf = {https://aclanthology.org/2025.findings-emnlp.942/},
     abbr = {EMNLP 2025},
     selected = {true},
 }
@@ -82,7 +82,7 @@ title={Adaptive Prompting: Ad-hoc Prompt Composition for Social Bias Detection},
 author={Maximilian Splieth\"{o}ver and Tim Knebler and Fabian Fumagalli and Maximilian Muschalik and Barbara Eva Hammer and Eyke H\"{u}llermeier and Henning Wachsmuth},
 booktitle={The 2025 Annual Conference of the Nations of the Americas Chapter of the ACL},
 year={2025},
-website={https://aclanthology.org/2025.naacl-long.122/},
+pdf={https://aclanthology.org/2025.naacl-long.122/},
 bibtex_show = {true},
 abbr = {NAACL 2025 (Oral)},
 selected = {true}
@@ -93,7 +93,7 @@ title={Exact Computation of Any-Order Shapley Interactions for Graph Neural Netw
 author={Maximilian Muschalik* and Fabian Fumagalli* and Paolo Frazzetto and Janine Strotherm and Luca Hermes and Alessandro Sperduti and Eyke H{\"u}llermeier and Barbara Hammer},
 booktitle={The Thirteenth International Conference on Learning Representations},
 year={2025},
-website={https://openreview.net/forum?id=9tKC0YM8sX},
+pdf={https://openreview.net/forum?id=9tKC0YM8sX},
 bibtex_show = {true},
 abbr = {ICLR 2025},
 selected = {true},
@@ -104,7 +104,7 @@ annotation = {* equal contribution}
       author={Fabian Fumagalli and Maximilian Muschalik and Eyke Hüllermeier and Barbara Hammer and Julia Herbinger},
       booktitle={The 28th International Conference on Artificial Intelligence and Statistics},
       year={2025},
-      website = {https://arxiv.org/abs/2412.17152},
+      pdf = {https://arxiv.org/abs/2412.17152},
       abbr	  = {AISTATS 2025},
 	bibtex_show = {true},
 	selected = {true}
@@ -116,7 +116,7 @@ annotation = {* equal contribution}
                Patrick Kolpaczki and Barbara Hammer and Eyke H\"{u}llermeier},
 	booktitle = {The Thirty-eight Conference on Neural Information Processing Systems (NeurIPS) Datasets and Benchmarks Track},
 	year      = {2024},
-	url       = {https://openreview.net/forum?id=knxGmi6SJi},
+	pdf       = {https://openreview.net/forum?id=knxGmi6SJi},
 	abbr	  = {NeurIPS 2024},
 	bibtex_show = {true},
 	poster       = {2024_NeurIPS_Poster_shapiq.pdf},
@@ -128,7 +128,7 @@ annotation = {* equal contribution}
 	author       = {Fabian Fumagalli and Maximilian Muschalik and Patrick Kolpaczki and Eyke H{\"u}llermeier and Barbara Hammer},
 	year         = 2024,
 	booktitle    = {Forty-first International Conference on Machine Learning (ICML)},
-	url          = {https://openreview.net/forum?id=d5jXW2H4gg},
+	pdf          = {https://openreview.net/forum?id=d5jXW2H4gg},
 	abbr         = {ICML 2024},
 	bibtex_show  = {true},
 	selected     = {true},
@@ -142,7 +142,7 @@ annotation = {* equal contribution}
 	publisher    = {{AAAI} Press},
 	pages        = {14388--14396},
 	doi          = {10.1609/AAAI.V38I12.29225},
-	url          = {https://doi.org/10.1609/aaai.v38i12.29225},
+	pdf          = {https://doi.org/10.1609/aaai.v38i12.29225},
 	abbr         = {AAAI 2024},
 	bibtex_show  = {true},
 	selected     = {true},
@@ -158,7 +158,7 @@ annotation = {* equal contribution}
 	series       = {Proceedings of Machine Learning Research},
 	volume       = 238,
 	pages        = {3520--3528},
-	url          = {https://proceedings.mlr.press/v238/kolpaczki24a.html},
+	pdf          = {https://proceedings.mlr.press/v238/kolpaczki24a.html},
 	abbr         = {AISTATS 2024},
 	bibtex_show  = {true},
 	selected     = {true},
@@ -175,7 +175,7 @@ annotation = {* equal contribution}
   pages        = {1--8},
   publisher    = {{IEEE}},
   year         = {2024},
-  url          = {https://doi.org/10.1109/IJCNN60899.2024.10650124},
+  pdf          = {https://doi.org/10.1109/IJCNN60899.2024.10650124},
   doi          = {10.1109/IJCNN60899.2024.10650124},
   bibtex_show  = {false},
   selected     = {false},
@@ -188,7 +188,7 @@ annotation = {* equal contribution}
 	author       = {Fabian Fumagalli* and Maximilian Muschalik* and Patrick Kolpaczki and Eyke H{\"{u}}llermeier and Barbara Hammer},
 	year         = 2023,
 	booktitle    = {Advances in Neural Information Processing Systems 36 (NeurIPS)},
-	url          = {https://openreview.net/forum?id=IEMLNF4gK4},
+	pdf          = {https://openreview.net/forum?id=IEMLNF4gK4},
 	abbr         = {NeurIPS 2023},
 	bibtex_show  = {true},
 	selected     = {true},
@@ -204,7 +204,7 @@ annotation = {* equal contribution}
 	number       = 12,
 	pages        = {4863--4903},
 	doi          = {10.1007/S10994-023-06385-Y},
-	url          = {https://doi.org/10.1007/s10994-023-06385-y},
+	pdf          = {https://doi.org/10.1007/s10994-023-06385-y},
 	abbr         = {MLJ},
 	bibtex_show  = {true},
 	selected     = {true},
@@ -222,7 +222,7 @@ annotation = {* equal contribution}
 	volume       = 1901,
 	pages        = {177--194},
 	doi          = {10.1007/978-3-031-44064-9\_11},
-	url          = {https://doi.org/10.1007/978-3-031-44064-9\_11},
+	pdf          = {https://doi.org/10.1007/978-3-031-44064-9\_11},
 	abbr         = {xAI 2023},
 	slides       = {2023_xAI_iPDP_Presentation_slides.pdf},
 	bibtex_show  = {true},
@@ -240,7 +240,7 @@ annotation = {* equal contribution}
 	year         = 2023,
 	pages        = {428--445},
 	doi          = {10.1007/978-3-031-43418-1\_26},
-	url          = {https://doi.org/10.1007/978-3-031-43418-1\_26},
+	pdf          = {https://doi.org/10.1007/978-3-031-43418-1\_26},
 	abbr         = {ECML PKDD 2023},
 	bibtex_show  = {true},
 	selected     = {true},
