--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -120,7 +120,7 @@ annotation = {* equal contribution}
 	abbr	  = {NeurIPS 2024},
 	bibtex_show = {true},
 	poster       = {2024_NeurIPS_Poster_shapiq.pdf},
-	website      = {https://github.com/mmschlk/shapiq},
+	code      = {https://github.com/mmschlk/shapiq},
 	selected = {true}
 }
 @inproceedings{Fumagalli.2024,
@@ -271,7 +271,7 @@ annotation = {* equal contribution}
 	doi          = {10.1007/s13218-022-00766-6},
 	abbr         = {K{\"{u}}nstliche Intell.},
 	selected     = {false},
-	website      = {https://link.springer.com/article/10.1007/s13218-022-00766-6},
+	pdf      = {https://link.springer.com/article/10.1007/s13218-022-00766-6},
 	bibtex_show  = {true},
 	annotation   = {* equal contribution},
 	abbr = {KI Journal},
