--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -180,8 +180,6 @@ annotation = {* equal contribution}
   bibtex_show  = {false},
   selected     = {false},
   abbr       = {IJCNN 2024},
-    bibtex_show  = {true},
-    selected = {true}
 }
 @inproceedings{Fumagalli.2023b,
 	title        = {{SHAP-IQ:} Unified Approximation of any-order Shapley Interactions},
@@ -271,7 +269,7 @@ annotation = {* equal contribution}
 	doi          = {10.1007/s13218-022-00766-6},
 	abbr         = {K{\"{u}}nstliche Intell.},
 	pdf      = {https://link.springer.com/article/10.1007/s13218-022-00766-6},
-	bibtex_show  = {true},
+	bibtex_show  = {false},
 	annotation   = {* equal contribution},
 	selected = {false},
 }
