--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -267,7 +267,7 @@ annotation = {* equal contribution}
 	number       = 3,
 	pages        = {211--224},
 	doi          = {10.1007/s13218-022-00766-6},
-	abbr         = {K{\"{u}}nstliche Intell.},
+	abbr         = {KI Journal},
 	pdf      = {https://link.springer.com/article/10.1007/s13218-022-00766-6},
 	bibtex_show  = {false},
 	annotation   = {* equal contribution},
